compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_right_parenthesis.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main(） { Nil }"
---
----- SOURCE CODE
pub fn main(） { Nil }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:13
  │
1 │ pub fn main(） { Nil }
  │             ^^ Unexpected character

This looks like ascii right parenthesis, but it is actually the unicode
fullwidth right parenthesis.
